# project

./: .claudeignore  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  lifedash.db  pyproject.toml  readme.md
.claude/: settings.json
.claude/agents/: life-dashboard-reviewer.md
.claude/hooks/: post-edit-eslint.sh  pre-commit-check.sh  pre-push-e2e.sh  session-start.sh
.claude/state/: activity-log.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 4bbb978ce5a7_create_roadmap_tables.py  4fbe97fa41c1_add_trip_plan_items.py  a1b2c3d4e5f6_seed_planner_data.py  a632e06d74ce_enable_rls_all_tables.py  b2c3d4e5f6a7_create_domain_tables.py  c3d4e5f6a7b8_create_travel_tables.py  d5e8f1a2b3c4_add_trip_location_and_restaurants.py  e8f1a2b3c4d5_create_configurable_trackers.py  f7c9a2b4e6d1_create_finance_goal.py
app/: main.py
app/core/: config.py  database.py  model.py  (+2 more)
docs/: deployment.md  harness-current-state.md  harness-engineering.md  pre-deploy-checklist.md  readme.md  self-hosting.md
frontend/: .gitignore  .prettierignore  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts
scripts/: pre-deploy-check.ps1  self_host_preflight.py
tests/: conftest.py  test_ai_routes.py  test_auth.py  test_career.py  test_crud.py  test_dashboard.py  test_devstatus.py  test_error_handling.py  test_export.py  test_finance.py  test_geocoding.py  test_growth.py  test_health.py  test_planner.py  test_security.py  test_self_host_preflight.py  test_trackers.py  test_travel.py
(+223 files in other folders)
