[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.19.0",
    "alembic>=1.18.4",
    "python-dateutil>=2.9.0",
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.46.0",
    "google-genai>=2.9.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
